--- a/cart-service/src/main/resources/application.properties
+++ b/cart-service/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.application.name=CART-SERVICE
 
 spring.data.mongodb.uri=mongodb+srv://user_rhea_db:abcd1234@shoppingcartcluster.su7hawo.mongodb.net/shoppingCart?retryWrites=true&w=majority&authSource=admin
 
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
