Added Swagger configuration to product service

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.application.name=PRODUCT-SERVICE
 
 spring.data.mongodb.uri=mongodb+srv://user_rhea_db:abcd1234@shoppingcartcluster.su7hawo.mongodb.net/shoppingCart?retryWrites=true&w=majority&authSource=admin
 
-
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
