--- a/cart-service/pom.xml
+++ b/cart-service/pom.xml
@@ -21,6 +21,16 @@
 	</properties>
 	<dependencies>
 		<dependency>
+    		<groupId>org.mockito</groupId>
+    		<artifactId>mockito-core</artifactId>
+    		<scope>test</scope>
+		</dependency>
+		<dependency>
+    		<groupId>org.mockito</groupId>
+    		<artifactId>mockito-junit-jupiter</artifactId>
+    		<scope>test</scope>
+		</dependency>			
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
