--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -33,6 +33,22 @@
     		<version>2.7.0</version>
 		</dependency>
 		<dependency>
+    		<groupId>org.mockito</groupId>
+    		<artifactId>mockito-core</artifactId>
+    		<scope>test</scope>
+		</dependency>
+		<dependency>
+    		<groupId>org.mockito</groupId>
+    		<artifactId>mockito-junit-jupiter</artifactId>
+    		<scope>test</scope>
+		</dependency>		
+		<dependency>
+    		<groupId>org.unitils</groupId>
+    		<artifactId>unitils-core</artifactId>
+    		<version>3.4.2</version>
+    		<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
