CRUD operations and Swagger for Order Service

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port= 9095
+spring.application.name=ORDERS-SERVICE
+
+spring.data.mongodb.uri=mongodb+srv://user_rhea_db:abcd1234@shoppingcartcluster.su7hawo.mongodb.net/shoppingCart?retryWrites=true&w=majority&authSource=admin
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
