Started Implementing Security in Cart Service

--- a/cart-service/pom.xml
+++ b/cart-service/pom.xml
@@ -19,7 +19,11 @@
 		<junit-jupiter.version>5.9.0</junit-jupiter.version>
         <mockito.version>4.7.0</mockito.version>
 	</properties>
-	<dependencies>
+	<dependencies>		
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 		<dependency>
     		<groupId>io.springfox</groupId>
     		<artifactId>springfox-swagger-ui</artifactId>
