--- a/cart-service/pom.xml
+++ b/cart-service/pom.xml
@@ -25,6 +25,11 @@
     		<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<dependency>
+    		<groupId>io.jsonwebtoken</groupId>
+    		<artifactId>jjwt</artifactId>
+    		<version>0.9.1</version>
+		</dependency>		
+		<dependency>
     		<groupId>io.springfox</groupId>
     		<artifactId>springfox-swagger-ui</artifactId>
     		<version>2.7.0</version>
