--- a/cart-service/pom.xml
+++ b/cart-service/pom.xml
@@ -20,10 +20,10 @@
         <mockito.version>4.7.0</mockito.version>
 	</properties>
 	<dependencies>		
-		<dependency>
+		<!-- <dependency>
     		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+		</dependency> -->
 		<dependency>
     		<groupId>io.jsonwebtoken</groupId>
     		<artifactId>jjwt</artifactId>
